Added better navbar

--- a/Webshop/Views/Shared/_Layout.cshtml
+++ b/Webshop/Views/Shared/_Layout.cshtml
@@ -52,7 +52,10 @@
                     <div class="box3">
                         <a asp-controller="Home" asp-action="Contact"> Contact</a>
                     </div>
-                    <partial name="_LoginPartial" />
+                    <div class="box4">
+                        <a><partial name="_LoginPartial" /></a>
+                    </div>
+                    
                 </div>
             </div>
 
