--- a/Webshop/Views/Shared/_LoginPartial.cshtml
+++ b/Webshop/Views/Shared/_LoginPartial.cshtml
@@ -18,13 +18,13 @@
 else
 {
     <link href="~/css/site.css" rel="stylesheet" />
-    <ul class="container-test">
+    <div class="container-test">
         <div class="b1">
-            <li><a asp-area="Identity" asp-page="/Account/Register">Register</a></li>
+            <a asp-area="Identity" asp-page="/Account/Register">Register</a>
         </div>
         <div class="b2">
-            <li><a asp-area="Identity" asp-page="/Account/Login">Login</a></li>
+            <a asp-area="Identity" asp-page="/Account/Login">Login</a>
         </div>
-        
-    </ul>
+
+    </div>
 }
