--- a/Webshop/wwwroot/css/site.css
+++ b/Webshop/wwwroot/css/site.css
@@ -1,14 +1,15 @@
 ﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification\ 
 for details on configuring this project to bundle and minify static web assets. */
 body {
-  margin:0;
-  left:0;
+    padding-top: 50px;
+    padding-bottom: 20px;
 }
 
 /* Wrapping element */
 /* Set some basic padding to keep content from hitting the edges */
 .body-content {
-    
+    padding-left: 15px;
+    padding-right: 15px;
 }
 
 /* Carousel */
@@ -26,90 +27,11 @@ body {
 #qrCode {
     margin: 15px;
 }
-@media only screen and (min-width:500px) {
-    .container-test {
-        display: flex;
-    }
-}
-label {
-    margin: 0 0 0 0;
-    font-size: 26px;
-    line-height: 70px;
-    display: none;
-}
 
-.container-test {
-    background-color:blue;
-    height:70px;
-    padding-left:15px;
-    padding-right:15px;
-    font-size:16px;
-    line-height:70px;
-    
-}
-
-
-#toggle {
-    display: none;
-}
 /* Hide/rearrange for smaller screens */
-@media only screen and (max-width: 500px) {
+@media screen and (max-width: 767px) {
     /* Hide captions */
-
-    label {
-        display: block;
-        cursor: pointer;
-        background-color: blue;
-        padding-left: 15px;
+    .carousel-caption {
+        display: none;
     }
-    .container-test {
-        text-align:center;
-        width:60%;
-        height:100px;
-        display:none;
-        background-color:blue;
-    }
-    .container-test a {
-        display:block;
-        border-bottom:1px solid #ccc;
-        margin:0;
-        padding:0;
-    }
-    #toggle:checked + .container-test {
-        display:block;
-        
-    }
-    
 }
-
-
-.box {
-    flex:10;
-    
-    
-}
-.box1 {
-    flex:1;
-    margin-right:10px;
-}
-.box2 {
-    flex: 1;
-    margin-right: 10px;
-}
-.box3 {
-    flex: 1;
-    margin-right: 10px;
-}
-.box4 {
-    flex: 1;
-    margin-right: 10px;
-}
-.b1 {
-    flex: 2;
-    margin-right: 40px;
-}
-.b2 {
-    flex:2;
-    
-}
-
