--- a/Webshop/Views/Home/Index.cshtml
+++ b/Webshop/Views/Home/Index.cshtml
@@ -1,7 +1,30 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
+<link rel="stylesheet" href="~/css/site.css" />
+<h1>Welcome to Homebrew</h1>
 
-<h1>Welcome To HomeBrew</h1>
+<p>We just care about your money, customer-service is non existent</p>
 
-<p>This is a test</p>
+<div class="container-test1">
+    <div class="bo1">
+        <h2><img src="~/images/shop.png" width="25" style="margin-right:15px" /> Why us</h2>
+        <p>
+
+            WebshopinChina assist companies to enter the Chinese online market or to improve the current business
+            results in China. We do this by offering a cost-effective package tailored to the clients’ China e-com
+            merce strategy. We serve our European clients from Amsterdam, so we communicate with
+            them in the same time zone and eliminate any cultural or language barriers. Most of the operations are
+            executed in China. The team in China consists of Chinese designers, marketing experts, Chinese customer service and social media experts.
+        </p>
+    </div>
+    <div class="bo2">
+        <h2><img src="~/images/unique.png" width="25" style="margin-right:15px"/> Unique</h2>
+        <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed 
+        diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, 
+        sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+    </div>
+    <div class="bo3">
+        <h2><img src="~/images/customer.png" width="25" style="margin-right:15px" />Customer happiness</h2>
+    </div>
+</div>
