--- a/Webshop/Views/Shared/_Layout.cshtml
+++ b/Webshop/Views/Shared/_Layout.cshtml
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://fonts.googleapis.com/css?family=KoHo" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Merriweather|Slabo+27px" rel="stylesheet">
     <title>@ViewData["Title"] - Webshop</title>
 
     <environment include="Development">
@@ -70,7 +71,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; 2018 - Webshop</p>
+            <p>&copy; 2018 - Homebrew Webshop</p>
         </footer>
     </div>
 
