--- a/Webshop/Views/Home/Index.cshtml
+++ b/Webshop/Views/Home/Index.cshtml
@@ -25,6 +25,10 @@
         sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
     </div>
     <div class="bo3">
-        <h2><img src="~/images/customer.png" width="25" style="margin-right:15px" />Customer happiness</h2>
+        <h2><img src="~/images/customer.png" width="25" style="margin-right:15px" />Quotes</h2>
+        <li>Morgan Freeman: Wow this shop is amazing! It made me feel free again.</li>
+        <li>Stan lee: Finally a shop that is silence. - Dead silence.</li>
     </div>
+
+    <!--Make testimonials with blockquote-->
 </div>
