--- a/Webshop/wwwroot/css/site.css
+++ b/Webshop/wwwroot/css/site.css
@@ -124,6 +124,7 @@ label {
     
     text-align: center;
     color: white;
+
 }
     .container-test1 h2 {
         font-family: 'Merriweather', serif;
@@ -131,8 +132,9 @@ label {
     .container-test1 p, li {
         font-family: 'Asap', sans-serif;
         padding: 40px;
-        text-align: left;
-
+        text-align:left;
+        /*dispaly:inline*/
+        
     }
 .bo1 {
     flex: 1;
@@ -152,4 +154,83 @@ label {
     background-color: #282F3F;
     height: 390px;
     margin: 10px;
+}
+
+.blockquote {
+    background: #f9f9f9;
+    border-left: 10px solid #ccc;
+    margin: 1.5em 10px;
+    margin-right: 20px;
+    margin-left: 20px;
+    padding: 0.5em 10px;
+    quotes: "\201C""\201D""\2018""\2019";
+}
+    .blockquote:before {
+        color: #ccc;
+        content: open-quote;
+        font-size: 4em;
+        line-height: 0.1em;
+        margin-right: 0.55em;
+        vertical-align: -0.4em;
+    }
+    .blockquote p {
+        display: inline;
+    }
+.blockquote1 {
+    background: #f9f9f9;
+    border-left: 10px solid #ccc;
+    margin: 1.5em 10px;
+    margin-right: 20px;
+    margin-left: 20px;
+    padding: 0.5em 10px;
+    quotes: "\201C""\201D""\2018""\2019";
+}
+
+    .blockquote1:before {
+        color: #ccc;
+        content: open-quote;
+        font-size: 4em;
+        line-height: 0.1em;
+        margin-right: 0.55em;
+        vertical-align: -0.4em;
+    }
+
+    .blockquote1 p {
+        display: inline;
+    }
+.blockquote2 {
+    background: #f9f9f9;
+    border-left: 10px solid #ccc;
+    margin: 1.5em 10px;
+    margin-right: 20px;
+    margin-left: 20px;
+    padding: 0.5em 10px;
+    quotes: "\201C""\201D""\2018""\2019";
+}
+
+    .blockquote2:before {
+        color: #ccc;
+        content: open-quote;
+        font-size: 4em;
+        line-height: 0.1em;
+        margin-right: 0.55em;
+        vertical-align: -0.4em;
+    }
+
+    .blockquote2 p {
+        display: inline;
+    }
+
+.h31 {
+    font-family: 'Source Sans Pro', sans-serif;
+    background-color: #3E4E59;
+    text-align: center;
+    font-size: 40px;
+    border-left: solid #576E7D 20px;
+}
+.bq {
+    margin:0 5% 0 5%;
+}
+h6 {
+    text-align:center;
 }
