--- a/Webshop/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Webshop/Areas/Identity/Pages/Account/Login.cshtml
@@ -80,3 +80,9 @@
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
 }
+<style>
+   .form-group {
+       text-align:center;
+       
+   }
+</style>
