--- a/Webshop/wwwroot/css/site.css
+++ b/Webshop/wwwroot/css/site.css
@@ -34,8 +34,9 @@ body {
     .container-test1 {
         display:flex;
     }
+    
 }
-label {
+.nav label {
     margin: 0 0 0 0;
     font-size: 26px;
     line-height: 70px;
@@ -64,7 +65,7 @@ label {
 @media only screen and (max-width: 500px) {
     /* Hide captions */
 
-    label {
+    .nav label {
         display: block;
         cursor: pointer;
         background-color: #1f343f;
@@ -89,6 +90,8 @@ label {
         
     }
     
+    
+    
 }
 
 
@@ -109,10 +112,7 @@ label {
     flex: 1;
     margin-right: 0px;
 }
-.box4 {
-    flex: 1;
-    margin-right: 10px;
-}
+
 .b1,.b2 {
     flex: 2;
     margin-right: 40px;
@@ -252,3 +252,36 @@ h6 {
 a:hover {
     color:orange;
 }
+.form-group-layout {
+    
+    padding:5%;
+    
+    text-align: center;
+}
+
+    .form-group-layout input {
+        width: 200px;
+        height: 25px;
+        border: none;
+        border-bottom: 1px solid #ccc;
+        margin-bottom: 25px;
+    }
+    :focus{outline:none}
+.form-control1 ~ .focus-border {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 0;
+    height: 20px;
+    background-color: orange;
+    transition: 0.4s;
+}
+.form-control1:focus ~ .focus-border {
+    width: 100%;
+    transition: 0.4s;
+}
+    .form-group-layout label {
+        color: black;
+        width: 200px;
+        
+    }
