Added better style to login

--- a/Webshop/Views/Shared/_Layout.cshtml
+++ b/Webshop/Views/Shared/_Layout.cshtml
@@ -55,7 +55,7 @@
                         <a asp-controller="Home" asp-action="About"> About</a>
                     </div>
                     <div class="box3">
-                        <a asp-controller="Home" asp-action="Contact"> Contact</a>
+                        <a asp-controller="Home" asp-action="Contact">Products</a>
                     </div>
                     
                     <div class="box4">
