Changed Index and _layout to display Products, corrected an English fault in index

--- a/Webshop/Views/Home/Index.cshtml
+++ b/Webshop/Views/Home/Index.cshtml
@@ -34,7 +34,7 @@
     <!--Make testimonials with blockquote-->
 
 </div>
-<h3 class="h31"><i>WE VALUE OUR CUSTOMERS OPNION</i></h3><h6>--We don't actually look at them--</h6>
+<h3 class="h31"><i>WE VALUE OUR CUSTOMERS OPINION</i></h3><h6>--We don't actually look at them--</h6>
 <div class="bq">
     <div class="blockquote">
         <h5><b>BOB</b></h5>
