--- a/Webshop/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Webshop/Areas/Identity/Pages/Account/Login.cshtml
@@ -1,6 +1,6 @@
 ﻿@page
-@model LoginModel
 
+@model Webshop.Models.UserViewModel
 @{
     ViewData["Title"] = "Log in";
 }
@@ -17,25 +17,25 @@
 
 
                     <div class="form-group">
-                        
-                        <input asp-for="Input.Email" placeholder="Email" class="form-control1"/> 
 
-                        <span asp-validation-for="Input.Email" class="text-danger"></span>
+                        <input asp-for="UserName" placeholder="Username" class="form-control"/>
+
+                        <span asp-validation-for="UserName" class="text-danger"></span>
                     </div>
                     <div class="form-group">
-                        
-                        <input asp-for="Input.Password" class="form-control1" placeholder="Password"/>
-                        <span asp-validation-for="Input.Password" class="text-danger"></span>
+
+                        <input asp-for="Password" class="form-control" placeholder="Password" />
+                        <span asp-validation-for="Password" class="text-danger"></span>
                     </div>
-                 
+
 
                     <div class="form-group">
                         <button type="submit" class="btn btn-default">Log in</button>
                     </div>
                     <div class="form-group">
-                       
+
                         <p>
-                            <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Register as a new user</a>
+                            <a asp-page="./Register">Register as a new user</a>
                         </p>
                     </div>
                 </div>
@@ -43,10 +43,7 @@
         </section>
     </div>
     <div class="col-md-6 col-md-offset-2">
-        <section>
-           
-          
-        </section>
+        <section></section>
     </div>
 </div>
 
@@ -54,6 +51,4 @@
     <partial name="_ValidationScriptsPartial" />
 }
 <style>
-    
-   
 </style>
