--- a/Webshop/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Webshop/Areas/Identity/Pages/Account/Register.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model RegisterModel
+@model Webshop.Models.UserViewModel
 @{
     ViewData["Title"] = "Register";
 }
@@ -8,26 +8,30 @@
 
 <div class="row">
     <div class="col-md-4">
-        <form asp-route-returnUrl="@Model.ReturnUrl" method="post">
+        <form  method="post">
             <h4>Create a new account.</h4>
             <hr />
+            <div class="form-group-layout">
+            <div class="form-group1">
+                <label asp-for="UserName"></label>
+                <input asp-for="UserName" class="form-control" />
+                <span asp-validation-for="UserName" class="text-danger"></span>
+            </div>
             <div asp-validation-summary="All" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Input.Email"></label>
-                <input asp-for="Input.Email" class="form-control" />
-                <span asp-validation-for="Input.Email" class="text-danger"></span>
+            <div class="form-group1">
+                <label asp-for="Email"></label>
+                <input asp-for="Email" class="form-control" />
+                <span asp-validation-for="Email" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Input.Password"></label>
-                <input asp-for="Input.Password" class="form-control" />
-                <span asp-validation-for="Input.Password" class="text-danger"></span>
+
+            <div class="form-group1">
+                <label asp-for="Password"></label>
+                <input asp-for="Password" class="form-control" />
+                <span asp-validation-for="Password" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Input.ConfirmPassword"></label>
-                <input asp-for="Input.ConfirmPassword" class="form-control" />
-                <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
-            </div>
+
             <button type="submit" class="btn btn-default">Register</button>
+                </div>
         </form>
     </div>
 </div>
