--- a/Webshop/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Webshop/Areas/Identity/Pages/Account/Register.cshtml
@@ -12,26 +12,28 @@
             <h4>Create a new account.</h4>
             <hr />
             <div class="form-group-layout">
-            <div class="form-group1">
-                <label asp-for="UserName"></label>
-                <input asp-for="UserName" class="form-control" />
-                <span asp-validation-for="UserName" class="text-danger"></span>
-            </div>
-            <div asp-validation-summary="All" class="text-danger"></div>
-            <div class="form-group1">
-                <label asp-for="Email"></label>
-                <input asp-for="Email" class="form-control" />
-                <span asp-validation-for="Email" class="text-danger"></span>
-            </div>
 
-            <div class="form-group1">
-                <label asp-for="Password"></label>
-                <input asp-for="Password" class="form-control" />
-                <span asp-validation-for="Password" class="text-danger"></span>
-            </div>
+                <div asp-validation-summary="All" class="text-danger"></div>
+                <div class="form-group">
 
-            <button type="submit" class="btn btn-default">Register</button>
+                    <input asp-for="Email" class="form-control" placeholder="Email" />
+                    <span asp-validation-for="Email" class="text-danger"></span>
                 </div>
+                <div class="form-group">
+
+                    <input asp-for="UserName" class="form-control" placeholder="Username" />
+                    <span asp-validation-for="UserName" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+
+                    <input asp-for="Password" class="form-control" placeholder="Password" />
+                    <span asp-validation-for="Password" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <button type="submit" class="btn btn-default">Register</button>
+                </div>
+                
+            </div>
         </form>
     </div>
 </div>
