--- a/Webshop/Views/Products/Create.cshtml
+++ b/Webshop/Views/Products/Create.cshtml
@@ -14,7 +14,12 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-image">
-                <img src=""/>
+                <img src="@{
+                              if (Model.Imagepath == "" || Model.Imagepath == null)
+                              {
+                                  Model.Imagepath = "..\\wwwroot\\images\\beer.png";
+                              }
+                              }"/>
             </div>
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
