--- a/Webshop/Views/Products/Edit.cshtml
+++ b/Webshop/Views/Products/Edit.cshtml
@@ -13,6 +13,14 @@
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="ProductID" />
+            <div class="form-image">
+                <img src="@{
+                              if (Model.Imagepath == "" || Model.Imagepath == null)
+                              {
+                                  Model.Imagepath = "..\\wwwroot\\images\\beer.png";
+                              }
+                          }"/>
+            </div>
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
                 <input asp-for="Name" class="form-control" />
