--- a/Webshop/Views/Home/Product.cshtml
+++ b/Webshop/Views/Home/Product.cshtml
@@ -17,12 +17,16 @@
     425.555.0100
 </address>
     @{
-        var properties1 = typeof(ProductViewModel).GetProperties().ToList();
+        
 
-        foreach (var data in properties1)
+        foreach (var data in Model.Products)
         {
             <div class="content">
-                <h3>@data.</h3>
+                <h3>@data.Name</h3>
+                <img src="@data.Imagepath" />
+                <p>@data.Description</p>
+                <p>@data.Price</p>
+                <p>@data.Stock</p>
             </div>
         }
     }
