--- a/Webshop/wwwroot/css/site.css
+++ b/Webshop/wwwroot/css/site.css
@@ -38,6 +38,9 @@ body {
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
+        align-items:flex-start;
+        align-content:center;
+       
     }
     
 }
@@ -272,6 +275,7 @@ a:hover {
         border: none;
         border-bottom: 1px solid #ccc;
         margin-bottom: 25px;
+        
     }
     :focus{outline:none}
 .form-control1 ~ .focus-border {
@@ -322,11 +326,28 @@ a:hover {
         padding: 0 0.25em;
         background: white;
     }
-   
+
 
 .content {
-   flex:1;
+    flex: 1;
+    margin: 4% 4% 0 4%;
+    border-bottom: 3px solid orange;
+    
 }
+    .content button {
+        width: 100%;
+        
+        height: 25px;
+        border: none;
+        color: white;
+        background-color: #1f343f;
+        padding:2px;
+    }
+    .content input {
+        width: 100%;
+        border: none;
+       
+    }
 .content p {
     display: inline;
 }
