Fixed login. Still need to apply changes to datastructure and remerge.

--- a/Webshop/Views/Home/Product.cshtml
+++ b/Webshop/Views/Home/Product.cshtml
@@ -30,7 +30,7 @@
                     <p><label><b>Price:</b></label><i> @data.Price</i></p><br />
                     <p><label><b>Stock:</b></label><i> @data.Stock</i></p><br />
 
-                    <input type="number" min="1" max="@data.Stock" placeholder="1" /><br />
+                   <input type="number" min="1" max="@data.Stock" placeholder="Enter Amount" /><br />
 
                     <button >Buy</button>
                 </div>
