--- a/Webshop/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Webshop/Areas/Identity/Pages/Account/Login.cshtml
@@ -1,6 +1,6 @@
 ﻿@page
 
-@model Webshop.Models.UserViewModel
+@model LoginModel
 @{
     ViewData["Title"] = "Log in";
 }
@@ -18,14 +18,14 @@
 
                     <div class="form-group">
 
-                        <input asp-for="UserName" placeholder="Username" class="form-control"/>
+                        <input asp-for="Input.Email" placeholder="Email" class="form-control"/>
 
-                        <span asp-validation-for="UserName" class="text-danger"></span>
+                        <span asp-validation-for="Input.Email" class="text-danger"></span>
                     </div>
                     <div class="form-group">
 
-                        <input asp-for="Password" class="form-control" placeholder="Password" />
-                        <span asp-validation-for="Password" class="text-danger"></span>
+                        <input asp-for="Input.Password" class="form-control" placeholder="Password" />
+                        <span asp-validation-for="Input.Password" class="text-danger"></span>
                     </div>
 
 
