--- a/Webshop/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Webshop/Areas/Identity/Pages/Account/Register.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model Webshop.Models.UserViewModel
+@model RegisterModel
 @{
     ViewData["Title"] = "Register";
 }
@@ -16,23 +16,28 @@
                 <div asp-validation-summary="All" class="text-danger"></div>
                 <div class="form-group">
 
-                    <input asp-for="Email" class="form-control" placeholder="Email" />
-                    <span asp-validation-for="Email" class="text-danger"></span>
+                    <input asp-for="Input.Email" class="form-control" placeholder="Email" />
+                    <span asp-validation-for="Input.Email" class="text-danger"></span>
                 </div>
                 <div class="form-group">
 
-                    <input asp-for="UserName" class="form-control" placeholder="Username" />
-                    <span asp-validation-for="UserName" class="text-danger"></span>
+                    <!--<input asp-for="UserName" class="form-control" placeholder="Username" />
+        <span asp-validation-for="UserName" class="text-danger"></span>-->
                 </div>
                 <div class="form-group">
 
-                    <input asp-for="Password" class="form-control" placeholder="Password" />
-                    <span asp-validation-for="Password" class="text-danger"></span>
+                    <input asp-for="Input.Password" class="form-control" placeholder="Password" />
+                    <span asp-validation-for="Input.Password" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+
+                    <input asp-for="Input.ConfirmPassword" class="form-control" placeholder="Confirm Password" />
+                    <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
                 </div>
                 <div class="form-group">
                     <button type="submit" class="btn btn-default">Register</button>
                 </div>
-                
+
             </div>
         </form>
     </div>
