Made some small changes. Still need to remove all boostrap and maybe some jquery.

--- a/Webshop/Views/Shared/_LoginPartial.cshtml
+++ b/Webshop/Views/Shared/_LoginPartial.cshtml
@@ -5,14 +5,14 @@
 @if (SignInManager.IsSignedIn(User))
 {
     <form asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Page("/Index", new { area = "" })" method="post" id="logoutForm" class="navbar-right">
-        <ul class="nav navbar-nav navbar-right">
-            <li>
+        <div class="container-test">
+            <div class="b1">
                 <a asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">@UserManager.GetUserName(User)!</a>
-            </li>
-            <li>
+            </div>
+            <div class="b2">
                 <button type="submit" class="btn btn-link navbar-btn navbar-link">Logout</button>
-            </li>
-        </ul>
+            </div>
+        </div>
     </form>
 }
 else
