--- a/Webshop/wwwroot/css/site.css
+++ b/Webshop/wwwroot/css/site.css
@@ -103,7 +103,13 @@ body {
     
     
 }
-
+.container-test button {
+   
+    height: 25px;
+    border: none;
+    color: white;
+    background-color: #1f343f;
+}
 
 .box {
     flex:10;
