--- a/Webshop/wwwroot/css/site.css
+++ b/Webshop/wwwroot/css/site.css
@@ -82,14 +82,14 @@ body {
     .container-test {
         text-align:center;
         width:100%;
-        height:150px;
+        height:220px;
         line-height:20px;
         display:none;
         background-color:#1f343f;
     }
         .container-test a {
             display: block;
-            border-bottom: 1px solid rgb(31,52,40);
+            
             margin: 0;
             padding: 0;
         }
@@ -98,7 +98,9 @@ body {
         
     }
   
-
+    .container-test2 {
+        display:flex;
+    }
     
     
     
@@ -128,13 +130,17 @@ body {
     flex: 1;
     margin-right: 0px;
 }
-
-.b1,.b2 {
+.b {
+    flex: 1;
+    margin-right: 10px;
+}
+.b1{
     flex: 2;
     margin-right: 40px;
     font-size:12px;
     color:blue;
 }
+
 
 .container-test1 {
     
@@ -274,6 +280,10 @@ a:hover {
     
     text-align: center;
 }
+.b{
+    flex:1;
+    margin-right:30px;
+}
 
     .form-group-layout input {
         width: 200px;
@@ -312,7 +322,16 @@ a:hover {
     .person1 {
         text-align:center;
         margin:5% 20% 5% 20%;
+
     }
+        .person1 h3 {
+            font-family: 'Merriweather', serif;
+            font-size:15px;
+        }
+        .person1 p {
+            font-family: 'Asap', sans-serif;
+            font-size:13px;
+        }
 .hr1 {
     overflow: visible; /* For IE */
     padding: 0;
@@ -335,25 +354,52 @@ a:hover {
 
 
 .content {
-    flex: 1;
-    margin: 4% 4% 0 4%;
-    border-bottom: 3px solid orange;
+    width:250px;
     
+    margin: 4% 8% 0 8%;
+    border-bottom: 1px solid orange;
+    
+}
+    .content label {
+        color: orange;
+    }
+.desc {
+    height: 200px;
+    border-left: 1px solid #F0F0DF;
+    padding-left:5px;
 }
     .content button {
         width: 100%;
-        
+       
         height: 25px;
         border: none;
+       
         color: white;
         background-color: #1f343f;
         padding:2px;
     }
-    .content input {
-        width: 100%;
-        border: none;
-       
-    }
+        .content button:hover {
+            background-color: #354852;
+        }
+.content input {
+    width: 100%;
+    border:none;
+    
+    
+}
+.content h3 {
+    font-family: 'Merriweather', serif;
+}
 .content p {
+    
+    font-family: 'Asap', sans-serif;
+    font-size:14px;
     display: inline;
+}
+.hr2 {
+
+    border: 0;
+    height: 0;
+    border-top: 1px solid rgba(0, 0, 0, 0.1);
+    border-bottom: 1px solid rgba(255, 255, 255, 0.3);
 }
