--- a/Webshop/Views/Home/Product.cshtml
+++ b/Webshop/Views/Home/Product.cshtml
@@ -33,7 +33,7 @@
 
                    <input type="number" min="1" max="@data.Stock" placeholder="Enter Amount" /><br />
 
-                    <button >Buy</button>
+                    <button ônclick="location.href = '@Url.Action("AddProduct", "Cart")'">Buy</button>
                 </div>
 
             </div>
