Some more methods for CartController

--- a/Webshop/Views/Cart/Cart.cshtml
+++ b/Webshop/Views/Cart/Cart.cshtml
@@ -40,4 +40,4 @@
 
 <h3>@Model.AmountOfItems</h3>
 <h4>@Model.TotalPrice</h4>
-<button   name="form-btn cart">Buy</button>
+<button onclick="location.href = '@Url.Action("BuyCart","Cart")'"  name="form-btn cart">Buy</button>
